# Rua

./: .gitignore  Documento-tecnico-RUA.md  Overview-Codigo.md  README.md  RUA_QUICKSTART.md  demo.py  pyproject.toml
examples/: calculator.rua  console_io.rua  minimal.rua  pet.rua
src/rua/: __init__.py  ast_nodes.py  ast_printer.py  c_transpiler.py  parser.py  scanner.py  tokens.py
tests/: test_ast_nodes.py  test_ast_printer.py  test_c_transpiler.py  test_demo.py  test_parser.py  test_scanner.py  test_tokens.py
