[project]
name = "rua-compiler"
version = "0.1.0"
description = "Minimal Rua V1 compiler front end in Python"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
